Bug 683959 - crash [@ nsFtpState::R_retr() ]. r=jduell